ascent_macro_tests/tests/macros/fail/incompatible_variable_type.rs
//! Incompatible variable type

use ascent::ascent;

ascent! {
    relation fact(usize);

    relation rule(String);

    // Invalid: This rule tries to assign a variable to a value of incompatible type:
    rule(x) <-- fact(x);
}

fn main() {}
